[ENTESB-3721] Fix path issues on Windows